# archimedes

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build_archimedes.lua  conanfile.py  conanfile.txt  conanfile_dev.py  premake5.lua  version.txt
.github/workflows/: build_conan_deps.yml  build_conan_deps.yml.disable  build_test_and_upload_deps.yml  cmake.yml  linter.yml  nvrhi_build_test  nvrhi_build_test.yaml  nvrhi_build_test.yml  nvrhi_build_test.yml.disable  nvrhi_upload_recipe.yml.disabled  test.yml  upload_conan_deps.yml  upload_engine.yml  windows_gcc15_test.yml
archimedes_bin/: CMakeLists.txt  Examples.h  main.cpp
archimedes_bin/examples/: Examples._cpp  Examples.cpp  Examples.h  LegacyAudioTests.h  NvrhiRendererTestApp.h  PhysicsTestApp.h  SpatialAudioTestApp.h  TextRenderTestApp.h
cmake/: archimedesConfig.cmake.in  build_mode.cmake  conan.cmake  defines.cmake  install.cmake  launch.cmake  launch_vs_json.cmake  library.cmake  msvc.cmake  ninja_fix.cmake  non_conan_deps.cmake  options.cmake  os.cmake  read_version.cmake  targets.cmake
cmake/launch/: clion.cmake  visual_studio.cmake
cmake/targets/: archimedes_bin.cmake  examples.cmake  tests.cmake
config/engine-config/: window.json
examples/: CMakeLists.txt  build_examples.lua
examples/asset_manager/TestApp/: TestApp.cpp  TestApp.h
examples/audio/: Helpers.h
examples/audio/ControlTestApp/: ControlTestApp.cpp  ControlTestApp.h
examples/audio/RewindTestApp/: RewindTestApp.cpp  RewindTestApp.h
examples/audio/SimpleSoundTestApp/: SimpleSoundTestApp.cpp  SimpleSoundTestApp.h
examples/audio/SpatialAudioTestApp/: SpatialAudioTestApp.cpp  SpatialAudioTestApp.h
examples/examples/: Examples.h
examples/examples/audio/: Helpers.h  RewindTestApp.h  SpatialAudioTestApp.h
examples/input/TestApp/: TestApp.cpp  TestApp.h
examples/nvrhi_renderer/TestApp/: TestApp.cpp  TestApp.h
examples/physics/InteractiveCollisionTestApp/: InteractiveCollisionTestApp.cpp  InteractiveCollisionTestApp.h
examples/physics/RepulseTestApp/: RepulseTestApp.cpp  RepulseTestApp.h
examples/physics/TestApp/: TestApp.cpp  TestApp.h
examples/text_render/TestApp/: TestApp.cpp  TestApp.h
include/: Application.h  ArchMath.h  AssetManager.h  Ecs.h  Engine.h  Exception.h  Font.h  Gfx.h  Hier.h  Input.h  InputHandler.h  Logger.h  Logger.hpp  Mmath.h  Ref.h  Scene.h  TUtils.h  Text.h  Transform.h  Window.h  advanced_math.h  engine.h  exception.h  input_handler.h  meta.h  net.h  net.hpp  pch.h  serialization.hpp  shaderClass.hpp  template_utilities.hpp  transform.h  typedesc.hpp  utilities.hpp  window.h
include/archimedes/: Font.h  Gfx.h  Hier.h  Input.h  Logger.h  Logger.hpp  Meta.h  Net.h  Scene.h  Text.h  Version.h  Window.h  pch.h
include/asset_manager/: AssetEnums.h  AssetException.h  AssetHandle.h  AssetID.h  AssetImporterManager.h  AssetManager.h  AudioImporter.h  IAssetImporter.h  IAssetLoader.h  MeshImporter.h  MeshLoader.h  ShaderImporter.h  TextureImporter.h
include/audio/: AudioException.h  AudioListener.h  AudioManager.h  AudioMixer.h  AudioSource.h  AudioSourceComponent.h  Calls.hpp  Clip.h  Exception.h  Listener.h  ListenerComponent.h  Mixer.h  SoundBank.h  SoundDevice.h  Source.h  SourceComponent.h  SourceManager.h  SourcePlayer.h  calls.hpp  exception.h  sound_device.h
include/ecs/: CommonComponentPool.h  CommonComponentPool.hpp  ComponentInfo.h  ComponentPool.h  ComponentPool.hpp  ComponentPoolIterator.h  ComponentPoolIterator.hpp  ComponentSpecs.h  ComponentTraits.h  ComponentTraits.hpp  Domain.h  Domain.hpp  DomainAwareComponent.h  Entity.h  EntityFormatter.h  EntityFormatter.hpp  EntityPool.h  EntityPool.hpp  EntitySpecs.h  EntityTraits.h  EntityTraits.hpp  ExcludeT.h  ExcludingView.h  ExcludingView.hpp  ExcludingViewIterator.h  Flag.h  InClassComponentSpecs.h  InclassComponentSpecs.h  IsEntity.h  SparseSet.h  SparseSet.hpp  View.h  View.hpp  ViewFwd.h  ViewIterator.h  ViewIterator.hpp  common.h  component.h  component_manager.h  component_pool.h  (+5 more)
include/exceptions/: ConfigException.h  GLFWException.h  InitException.h  InvalidEnumException.h  config_exception.h  init_exception.h
include/font/: Face.h  Font.h  FontDB.h  FontNotFoundException.h  FontStyle.h  GlyphData.h  MSDFAtlasGen.h
include/gfx/: Buffer.h  GraphicsFormat.h  Mesh.h  Mesh.hpp  Renderer.h  RenderingAPI.h  Texture.h
include/glad/: glad.h
include/graphics/: buffer_object.h  glad_exception.h  glfw_exception.h  gpubuffer.h  model.h  primitives.h  renderer.h  shader.h  texture.h  vertex_storage.h
include/hier/: ChildNode.h  Children.h  ChildrenIterator.h  HierarchyIterator.h  HierarchyNode.h  Parent.h  Siblings.h
include/input/: Input.h  Key.h  KeyCode.h  KeyState.h  KeyState.hpp  KeyStateWrapper.h  KeyStateWrapper.hpp  Keyboard.h  Mouse.h  Mouse.hpp  MouseButtonCode.h  System.h
include/math/: Math.h  QDiv.h  QDiv.hpp  QMod.h  QMod.hpp  QMul.h  QMul.hpp
include/meta/: Rtti.h  Typeof.hpp  rtti.h
include/net/: Host.h  IPv4.h  (+25 more)
run/: projekty.txt
src/: Engine.cpp  Exception.cpp  InputHandler.cpp  Logger.cpp  Scene.cpp  Transform.cpp  Window.cpp  advanced_math.cpp  engine.cpp  exception.cpp  glad.c  input_handler.cpp  pch.cpp  shaderClass.cpp  transform.cpp  typedesc.cpp  window.cpp
tests/: CMakeLists.txt  Engine_Test.cpp  Scene_Test.cpp  Transform_Test.cpp  build_tests.lua  ecs_test.cpp  engine_test.cpp  ipv4.cpp  it_works.cpp  serialization.cpp  transform_test.cpp  transform_test.cpp.disable
tests/ecs/: Component.cpp  Component_Test.cpp  ECSExamples_Test.cpp  Entity.cpp  EntityFormatting_Test.cpp  Entity_Test.cpp  View.cpp  View_Test.cpp
tests/meta/rtti/: EnableRTTI_Test.cpp  ErrorsAndEquality_Test.cpp
tests/net/: Host_Test.cpp  IPv4Network_Test.cpp  IPv4_Test.cpp  host.cpp  ipv4.cpp  ipv4_network.cpp  receiver.cpp  tcp_socket.cpp  udp_socket.cpp
tests/net/async/: Host_Test.cpp  host.cpp  tcp_socket.cpp  udp_socket.cpp
tests/physics/: PhysicsSystem.cpp  System.cpp
tests/portability/: byteswap.cpp
tests/template_utilities/: auto_base_call.cpp
wsl/: WSLREADME.md
(+644 files in other folders)
